PR1 + PR2 fixes